# genie-api-sdk

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: developer-guide.md
python/: README.md  pyproject.toml
python/src/genie_api_sdk/: __init__.py  async_client.py  auth.py  client.py  errors.py  models.py
python/src/workato_genie/: __init__.py  client.py  models.py
python/tests/: test_client.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: auth.ts  client.ts  index.ts  types.ts
typescript/test/: client.test.mjs
