[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-api-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for the Genie Headless API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/genie_api_sdk"]
