[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-api-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for the Genie Headless API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Sarukrishna Ayyamperumal" }]
keywords = ["agentic", "genie", "headless-api", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://github.com/Krishnakrish77/genie-api-sdk"
Repository = "https://github.com/Krishnakrish77/genie-api-sdk"
Issues = "https://github.com/Krishnakrish77/genie-api-sdk/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/genie_api_sdk"]
